# 2D-Camera-SLAM

./: .bazelrc  .gitignore  BUILD  CameraModel.hpp  MODULE.bazel  README.md  WORKSPACE  camera_model.hpp  camera_sensor.hpp  landmark.hpp  localizer.hpp  navlog.hpp  pose2d.hpp  robot.hpp  sensor.hpp  world.hpp
logs/: localizer_gauss_newton.navlog
python/: README.md  setup_pyenv.sh  view_navlog.py
tests/: BUILD  test_localization.cpp  test_projection.cpp  test_robot_with_sensors.cpp
